[tool.poetry]
name = "generate_test"
version = "0.1.0"
description = ""
authors = ["Anthony Grant-Cook <grantcooka@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
